Assignment/Ram_Bharath_V/Assignment_4/hello-world/kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world

spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world

    spec:
      containers:
        - name: hello-world-container
          image: hello-world
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
