Assignment/Ram_Bharath_V/Assignment_4/hello-world/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: hello-world-flask
